--- a/mandelbulber2/formula/ui/abox_mod15.ui
+++ b/mandelbulber2/formula/ui/abox_mod15.ui
@@ -1423,16 +1423,6 @@ offset:</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="QFrame" name="frame">
-       <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
-       </property>
-      </widget>
-     </item>
     </layout>
    </item>
    <item>
@@ -2090,7 +2080,7 @@ offset:</string>
    <sender>checkBox_transf_function_enabled</sender>
    <signal>toggled(bool)</signal>
    <receiver>spinbox3_transf_addition_constant_111_z</receiver>
-   <slot>setDisabled(bool)</slot>
+   <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
      <x>33</x>
