Added code for NewLight button

--- a/mandelbulber2/qt/light_sources_manager.ui
+++ b/mandelbulber2/qt/light_sources_manager.ui
@@ -32,21 +32,21 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="pushButton_newLight">
        <property name="text">
         <string>New light</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="pushButton_duplicateLight">
        <property name="text">
         <string>Duplicate light</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="pushButton_deleteLight">
        <property name="text">
         <string>Delete light</string>
        </property>
